tests/positive/pr115_legacy_local_decl.safe
package pr115_legacy_local_decl

   subtype counter is integer (0 to 10)

   function build returns counter

      current : counter = 0
      current = 1
      return current

