tests/negative/neg_pr1113a_sum_select.safe
package neg_pr1113a_sum_select

   type shape is circle (radius : integer) or idle;

   current : shape = circle (1);
   radius : integer = current.radius;
